Remove auth middleware
