# infrastructure/rest/routes/user.go
@@ -3,19 +3,17 @@ package routes
 
 import (
 	userController "github.com/gbrayhan/microservices-go/infrastructure/rest/controllers/user"
-	"github.com/gbrayhan/microservices-go/infrastructure/rest/middlewares"
 	"github.com/gin-gonic/gin"
 )
 
 // UserRoutes is a function that contains all routes of the user
 func UserRoutes(router *gin.RouterGroup, controller *userController.Controller) {
-	routerAuth := router.Group("/user")
-	routerAuth.Use(middlewares.AuthJWTMiddleware())
+	userrouter := router.Group("/user")
 	{
-		routerAuth.POST("/", controller.NewUser)
-		routerAuth.GET("/:id", controller.GetUsersByID)
-		routerAuth.GET("/", controller.GetAllUsers)
-		routerAuth.PUT("/:id", controller.UpdateUser)
-		routerAuth.DELETE("/:id", controller.DeleteUser)
+		userrouter.POST("/", controller.NewUser)
+		userrouter.GET("/:id", controller.GetUsersByID)
+		userrouter.GET("/", controller.GetAllUsers)
+		userrouter.PUT("/:id", controller.UpdateUser)
+		userrouter.DELETE("/:id", controller.DeleteUser)
 	}
 }
